refactor: BridgeGameTest 반복코드를 ParameterizedTest로 리팩토링